# antigravity-controller

./: .env.example  .gitignore  README.md  pyproject.toml
src/controller/: __init__.py  config.py  main.py
src/controller/agent/: __init__.py  core.py  prompts.py
src/controller/api/: __init__.py  commands.py  health.py  status.py
src/controller/auth/: __init__.py  jwt_handler.py
src/controller/bot/: __init__.py  client.py  commands.py  formatter.py
src/controller/db/: __init__.py  database.py  models.py
src/controller/models/: __init__.py  agent.py  command.py  websocket.py
src/controller/security/: __init__.py  permissions.py
src/controller/services/: __init__.py  agent_client.py
src/controller/tools/: __init__.py  base.py  file_tools.py  git_tools.py  project_tools.py  shell_tools.py
src/controller/websocket/: __init__.py  manager.py  router.py
tests/: __init__.py  conftest.py  test_api.py  test_formatter.py  test_security.py  test_tools.py
